--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 springdoc.api-docs.path=/api/inventory
 springdoc.swagger-ui.path=/swagger-ui.html
-eureka.client.service-url.defaultZone=http://3.111.12.87:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #spring.profiles.active=development
-spring.config.import=configserver:http://3.111.12.87:8888
+#spring.config.import=configserver:http://3.111.12.87:8888
