--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-springdoc.api-docs.path=/api/inventory
-springdoc.swagger-ui.path=/swagger-ui.html
+spring.application.name=interested-inventory
 eureka.client.service-url.defaultZone=http://3.111.12.87:8761/eureka
-#spring.profiles.active=development
-#spring.config.import=configserver:http://3.111.12.87:8888
